# samwise

./: Cargo.toml  README.md  example.toml  justfile
.github/workflows/: build.yml  release.yml
agent/: Cargo.toml
agent/deb-assets/: 10-samwise-agent.rules  50_samwise
agent/src/: config.rs  main.rs
controller/: Cargo.toml  sample_config.toml
controller/src/: agent.rs  cli.rs  config.rs  device.rs  device_manager.rs  device_old.rs  dhcp.rs  id.rs  main.rs  model.rs  server.rs  shutdown.rs  wake.rs
example-config/: agent_linux.toml  controller.toml
proto/: Cargo.toml  build.rs
proto/src/: lib.rs  samwise.proto
wol-test/: Cargo.toml
wol-test/src/: main.rs
