[package]
name = "samwise-agent"
version = "0.1.0"
authors = ["Ben Navetta <ben.navetta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cfg-if = "0.1"
itertools = "0.9"
slog-async = "2.5"
slog-term = "2.6"
structopt = "0.3"
tonic = "0.3"
tokio = { version = "0.2", features = ["macros", "fs"] }
toml = "0.5"
samwise-proto = { path = "../proto" }

[dependencies.slog]
version = "2.5"
features = [ "max_level_trace", "release_max_level_info" ]

[dependencies.serde]
version = "1.0"
features = [ "derive" ]
