[package]
name = "samwise-controller"
version = "0.1.0"
authors = ["Ben Navetta <ben.navetta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
slog-async = "2.5"
slog-term = "2.6"
structopt = "0.3"
toml = "0.5"
tonic = "0.3"
warp = "0.2"

samwise-proto = { path = "../proto" }

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.slog]
version = "2.5"
features = [ "max_level_trace", "release_max_level_info" ]

[dependencies.pnet]
version = "0.26"
features = [ "serde" ]

[dependencies.tokio]
version = "0.2"
features = [
    "macros",
    "rt-core",
    "rt-threaded",
    "rt-util",
    "io-util",
    "fs",
    "process",
    "time",
    "sync"
]